bundle/palm.css
/* ... */
.page-wrapper {
  background-color: #f2f2f2;
  position: relative; }
  @media screen and (max-width: 45rem) {
    .page-wrapper {
      width: 100%;
      margin: 0; } }
  @media print, (min-width: 45.001rem) {
    .page-wrapper {
      width: 100%;
      max-width: 88.75rem;
      margin: 0 auto; } }
  .page-wrapper .hero {
    min-height: 2.7em; }
  .page-wrapper.fixed > main {
    padding-top: 90px; }
  .page-wrapper.fixed > #navigation-primary .navigation-wrapper {
    padding-top: 80px; }

/*
.content-wrapper {
    @include clearfix();
    padding:            0;
    @include media-query(palm) {
        width:          100%;
        margin:         0;
        &.hide {
            display:    none;
        }
    }
    @include media-query(lap-and-up) {
        width:          $contentWidthDeskPx;
        max-width:      100%;
        margin:         0 auto;
	}

}
*/
.content-wrapper-homepage {
  padding: 20px 40px;
  background-color: #f2f2f2;
  margin-bottom: 5em; }
  .content-wrapper-homepage .hero {
    margin-top: -20px;
    margin-left: -40px;
    margin-right: -40px;
    margin-bottom: 40px; }
  @media screen and (max-width: 45rem) {
    .content-wrapper-homepage {
      padding: 20px 20px; }
      .content-wrapper-homepage .hero {
        margin-left: -20px;
        margin-right: -20px; } }

.content-wrapper-three-columns {
  padding: 20px 40px;
  background-color: #f2f2f2;
  margin-bottom: 5em; }
  @media screen and (max-width: 45rem) {
    .content-wrapper-three-columns {
      padding: 20px 20px; } }

.content-wrapper-full-width {
  padding: 20px 40px;
  background-color: #f2f2f2;
  margin-bottom: 5em; }
  @media screen and (max-width: 45rem) {
    .content-wrapper-full-width {
      padding: 20px 20px; } }

.content-wrapper-article,
.content-wrapper-profil,
.content-wrapper-dossier {
  margin-top: 0; }
  @media print, (min-width: 45.001rem) {
    .content-wrapper-article,
    .content-wrapper-profil,
    .content-wrapper-dossier {
      flex-wrap: nowrap; }
      .content-wrapper-article .content-left,
      .content-wrapper-profil .content-left,
      .content-wrapper-dossier .content-left {
        flex-grow: 1;
        flex-shrink: 1;
        margin-left: 40px; }
      .content-wrapper-article .content-right,
      .content-wrapper-profil .content-right,
      .content-wrapper-dossier .content-right {
        flex-grow: 0;
        flex-shrink: 0; } }
  @media screen and (max-width: 45rem) {
    .content-wrapper-article,
    .content-wrapper-profil,
    .content-wrapper-dossier {
      padding: 0 20px; } }

.content-wrapper-bestellprozess {
  background-color: #FFFFFF; }
  .content-wrapper-bestellprozess .content {
    padding: 20px 40px;
    background-color: #f2f2f2;
    margin-bottom: 5em; }

@page {
  margin: 1.5cm 1cm 1cm 1cm; }

@media print, (min-width: 45.001rem) {
  .desk-hide {
    display: none !important; }
  .palm-show {
    display: none !important; } }

@media print, (min-width: 45.001rem) {
  .palm-show {
    display: none !important; } }

@media screen and (max-width: 45rem) {
  .palm-hide {
    display: none !important; }
  .palm-show {
    display: inline-block !important; } }

@media print, (max-width: 26.25rem) {
  .smallest-hide {
    display: none !important; }
  .smallest-show {
    display: inline-block !important; } }

.articleinfo {
  color: #808080;
  margin-bottom: 0.2em; }
  .articleinfo a {
    display: inline;
    color: #086D9A; }

.author--article {
  font-size: 2em; }
  @media screen and (max-width: 45rem) {
    .author--article {
      font-size: 1.5em; } }

blockquote {
  background-color: #f2f2f2;
  border-left: 5px solid #d9d9d9;
  margin-left: 1.25rem;
  background: none;
  border: 0 none;
  padding: 0;
  margin-bottom: 1.875rem;
  color: #333333; }
  blockquote > *:last-child {
    margin-bottom: 0; }

button,
.button {
  font-family: "droid-sans", Arial, sans-serif;
  cursor: pointer; }
  button:focus,
  .button:focus {
    outline: 1px dotted; }

.btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
  height: 2.5rem;
  margin: 0;
  margin-bottom: 0.9375rem;
  box-shadow: none;
  /* margin:                 $buttonMargin; // not here */
  text-decoration: none;
  padding: 0.3em 1em;
  font-size: 18px;
  display: inline-block;
  vertical-align: top;
  font: inherit;
  text-align: center;
  cursor: pointer;
  overflow: visible;
  background-color: #086D9A;
  color: #FFFFFF;
  border: 1px solid #086D9A;
  border-radius: 4px;
  width: auto; }
  @media screen and (max-width: 45rem) {
    .btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
      height: 2.5em; } }
  @media screen and (max-width: 45rem) {
    .btn, .button, .button-submit, .button--spaced, a.button, .button--ghost, .button--footer, .button--reversed, .button--disabled, .button--white, .button--buy {
      line-height: 2em; } }
  .btn:hover, .button:hover, .button-submit:hover, .button--spaced:hover, .button--ghost:hover, .button--footer:hover, .button--reversed:hover, .button--disabled:hover, .button--white:hover, .button--buy:hover, .btn:active, .button:active, .button-submit:active, .button--spaced:active, .button--ghost:active, .button--footer:active, .button--reversed:active, .button--disabled:active, .button--white:active, .button--buy:active, .btn:focus, .button:focus, .button-submit:focus, .button--spaced:focus, .button--ghost:focus, .button--footer:focus, .button--reversed:focus, .button--disabled:focus, .button--white:focus, .button--buy:focus {
    /* color:              $btn-font-color; // not here */
    /* background-color:   $btn-background-hover; // not here */ }
/* ... */

